remove a lot of useless old fluff from biscuit scss
there's a lot of unused classes in the stylesheets that are a leftover of when biscuit had a more inkbunnian design. these have been removed. the way journal overviews(?) look on the website has been redesigned to use content-entry.

--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -112,20 +112,8 @@
                         <h2>Site News</h2>
                     </div>
                     <div class="content-box">
-                        {% for news in data.news_recent %}
-                            <div class="journal-entry">
-                                <div class="journal-title">
-                                    <a href="/read?j={{ news.id }}">
-                                        {{ news.title|u.truncate(100, '...') }}
-                                    </a>
-                                </div>
-                                <div class="journal-info">
-                                    {{ news.published | relative_time }}
-                                </div>
-                                <div class="journal-contents">
-                                    {{ news.contents|u.truncate(150, '...') }}
-                                </div>
-                            </div>
+                        {% for journal in data.news_recent %}
+                            {{ include('/components/_journal.twig') }}
                         {% endfor %}
                     </div>
                 </div>
