--- a/private/skins/biscuit/templates/profile.twig
+++ b/private/skins/biscuit/templates/profile.twig
@@ -1,4 +1,4 @@
-{% extends "_layout.twig" %}
+{% extends "_layout_profile.twig" %}
 
 {% set title = data.username %}
 
@@ -25,29 +25,6 @@
         comment_id = '{{ data.id }}'
         user_id = '{{ data.id }}'
     </script>
-{% endblock %}
-
-{% block style %}
-    <style>
-        .jumbotron.profile-banner {
-            background-image: url('{{ banner_picture }}');
-        }
-        {#
-        body {
-            background: #323232;
-        }
-        #}
-    </style>
-{% endblock %}
-
-{% block precontent %}
-    <div class="jumbotron profile-banner"></div>
-    <div class="profile-intro">
-        <div class="page">
-            <div class="page-contents">
-            </div>
-        </div>
-    </div>
 {% endblock %}
 
 {% block content %}
