--- a/private/skins/biscuit/templates/components/default/header.twig
+++ b/private/skins/biscuit/templates/components/default/header.twig
@@ -37,7 +37,7 @@
                                     {{ link.username }}
                                 </a>
                             {% endfor %}
-                            <a class="menu-item-button small" href="/login.php">Add another account</a>
+                            <a class="menu-item-button small" href="/login">Add another account</a>
                         </div>
                     </div>
                 {% else %}
