--- a/private/skins/biscuit/templates/upload.twig
+++ b/private/skins/biscuit/templates/upload.twig
@@ -11,6 +11,11 @@
                 Make sure you have read the <a href="/guidelines">guidelines</a> first. Failure to comply
                 with the guidelines will result in a swift termination of your account(s).
             </p>
+            {% if is_chaziz_sb %}
+            <p>
+                NOTE: The upload limit is around 100 megabytes.
+            </p>
+            {% endif %}
             <div class="content-box">
                 <form name="uploadForm" id="uploadForm" method="post" action="upload" enctype="multipart/form-data">
                     <div class="panel panel-default">
