add early tos/rules pages

--- a/private/skins/biscuit/templates/components/default/footer.twig
+++ b/private/skins/biscuit/templates/components/default/footer.twig
@@ -3,6 +3,8 @@
         <div class="footer-content">
             <div>Running <a href="/version">OpenSB {{ opensb_version }}</a></div>
             <span><a href="/theme">Change theme</a></span>
+            <span><a href="/rules">Rules</a></span>
+            <span><a href="/tos">Terms of Service</a></span>
             <span><a href="/privacy">Privacy policy</a></span>
             <span>© 2021-{{ 'now' | date('Y') }} OpenSB contributors.</span>
             {% if is_chaziz_sb %}
