--- a/private/skins/bootstrap/templates/components/_footer_default.twig
+++ b/private/skins/bootstrap/templates/components/_footer_default.twig
@@ -6,6 +6,8 @@
                 <p class="my-0">© 2021-{{ 'now' | date('Y') }} OpenSB contributors</p>
                 <p class="my-0">
                     <a href="/version" class="me-1">About</a>
+                    <a href="/rules" class="me-1">Rules</a>
+                    <a href="/tos" class="me-1">Terms of Service</a>
                     <a href="/privacy" class="me-1">Privacy policy</a>
                     <a href="/theme" class="me-1">Change theme</a>
                 </p>
