--- a/private/skins/finalium/templates/components/_footer.twig
+++ b/private/skins/finalium/templates/components/_footer.twig
@@ -2,7 +2,9 @@
     <div class="footer">
         <img src="/assets/opensb_logo.png" alt="OpenSB">
         <p><strong>© openSB contributors</strong> · 2021-{{ 'now' | date('Y') }}
-            | <strong><a href="/privacy">Privacy Policy</a></strong>
+            | <strong><a href="/rules">Rules</a></strong> |
+            <strong><a href="/tos">Terms of Service</a></strong> |
+            <strong><a href="/privacy">Privacy Policy</a></strong>
         </p>
         <h5><a href="/version.php">Running OpenSB {{ opensb_version }}</a></h5>
         {% if isMaintenance != true %}
