--- a/private/skins/finalium/templates/components/beta/_footer.twig
+++ b/private/skins/finalium/templates/components/beta/_footer.twig
@@ -6,5 +6,8 @@
         <b>Uploads uploaded</b>: {{ footer_stats.submissions }}
     </p>
     <h5><a href="/version.php">Git Commit {{ opensb_version }}</a><br></h5>
-    <a href="/privacy">Privacy Policy</a> | <a href="/theme">Change theme</a>
+    <a href="/rules">Rules</a> |
+    <a href="/tos">Terms of Service</a> |
+    <a href="/privacy">Privacy Policy</a> |
+    <a href="/theme">Change theme</a>
 </div>
