improve design of buttons and banners

--- a/private/skins/biscuit/templates/design_test.twig
+++ b/private/skins/biscuit/templates/design_test.twig
@@ -24,7 +24,7 @@
     {% for color in color_types %}
         <div class="button button-{{ color }}">{{ color }} button!</div>
     {% endfor %}
-    <!-- not an actual color -->
+    {# not an actual color #}
     <div class="button button-get-started">get started button!</div>
     <hr>
     <div>Unix epoch: {{ "0" | relative_time() }}</div>
