--- a/scss/biscuit/default/_banner.scss
+++ b/scss/biscuit/default/_banner.scss
@@ -1,10 +1,11 @@
 .banner {
-  padding: 8px 10px;
+  padding: 8px 12px;
   display: flex;
   align-items: center;
-  border-radius: 2px;
-  box-shadow: 0 1px 2px rgba(black, 0.2);
+  border-radius: 6px;
+  box-shadow: 0 1px 2px rgba(black, 0.1);
   margin-bottom: 5px;
+  background-repeat: repeat-x;
 
   .notification-icon {
     margin-right: 6px;
@@ -13,8 +14,8 @@
 
 @each $color, $value in $color-map {
   .banner-#{$color} {
-    @include gradient-y($start-color: lighten($value, 4%), $end-color: darken($value, 4%));
-    border: 1px solid darken($value, 4%);
+    @include gradient-y($start-color: adjust-hue(lighten($value, 1%), 2), $end-color: adjust-hue(darken($value, 9%), 6));
+    border: 1px solid adjust-hue(darken($value, 10%), 6);
     color: contrast-color($value, #000, #fff);
 
     a {
