--- a/scss/biscuit/default.scss
+++ b/scss/biscuit/default.scss
@@ -153,6 +153,7 @@ hr {
 @import 'default/menus';
 @import 'default/tabs';
 @import 'default/table';
+@import 'default/pagination';
 
 @import 'default/watch_page';
 @import 'default/profile_page';
