--- a/scss/biscuit/default.scss
+++ b/scss/biscuit/default.scss
@@ -1,14 +1,15 @@
 /*!
  * OpenSB Biscuit (Finalium 2)
- * Made by Bluffingo for OpenSB
+ * Made by Chaziz for OpenSB
  */
 
 @import 'shared/base_variables';
 
-@import 'shared/imports';
-
 // bootstrap icons
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+$bootstrap-icons-font-dir: "/assets" !default;
+@import "../../vendor/twbs/bootstrap-icons/font/bootstrap-icons.scss";
+
+@import 'shared/imports';
 
 :root {
 	font-family: $font;
