redesign biscuit login page

--- a/private/skins/biscuit/templates/login.twig
+++ b/private/skins/biscuit/templates/login.twig
@@ -1,4 +1,4 @@
-{% extends "_layout.twig" %}
+{% extends "_layout_login.twig" %}
 
 {% set title = "Login" %}
 
@@ -10,7 +10,7 @@
             <div class="section-title">
                 <h1>Login</h1>
             </div>
-            <div class="content-box">
+            <div class="content-box rounded login">
                 <div class="panel-body">
                     <form method="post" name="loginForm" id="loginForm" action="login" class="form-signin">
                         <div class="form-input">
