--- a/scss/biscuit/default.scss
+++ b/scss/biscuit/default.scss
@@ -160,3 +160,4 @@ hr {
 @import 'default/profile_page';
 @import 'default/notice_page';
 @import 'default/admin_page';
+@import 'default/login_register_page';
