--- a/scss/biscuit/default/_content_box.scss
+++ b/scss/biscuit/default/_content_box.scss
@@ -15,6 +15,14 @@
         border-top: none;
     }
 
+    &.rounded {
+        border-radius: 5px;
+    }
+
+    &.login {
+        background: linear-gradient(180deg, rgb(253, 253, 253) 0%, rgb(225, 225, 225) 100%);
+    }
+
     // used for staff notes. i think it just looks cool honestly
     &.content-note
     {
