fix edit page not saving stuff correctly + fix notice page design?
the notice page isn't accessible publicly (https://squarebracket.pw/notices) and it's in a very crapped state. it hasn't had any work on it since what, october 2023? it's a shitty abandoned page that doesn't fit the current plans i have for biscuit and is probably going to get removed in favor of being inside the header (something like youtube idk) once i actually work on *actual* notifications.

the edit page also didn't save stuff but that was due to a commit from a while back i did that reorganized pages. i think, i don't remember.

--- a/private/skins/biscuit/templates/edit.twig
+++ b/private/skins/biscuit/templates/edit.twig
@@ -26,7 +26,7 @@
                                   style="overflow:hidden;resize:vertical" rows="3">{{ data.description }}</textarea>
                     </div>
 
-                    {% if show_work_in_progress_stuff %}
+                    {% if is_debug %}
                         <div class="form-input">
                             Visibility:
                             <select name="visibility" id="visibility">
