new opensb logo
it's still used on finalium apparently

--- a/private/skins/finalium/templates/components/_footer.twig
+++ b/private/skins/finalium/templates/components/_footer.twig
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer">
         <img src="/assets/opensb_logo.png" alt="OpenSB">
-        <p><strong>© openSB contributors</strong> · 2021-{{ 'now' | date('Y') }}
+        <p><strong>© OpenSB contributors</strong> · 2021-{{ 'now' | date('Y') }}
             | <strong><a href="/rules">Rules</a></strong> |
             <strong><a href="/tos">Terms of Service</a></strong> |
             <strong><a href="/privacy">Privacy Policy</a></strong>
