--- a/scss/biscuit/default/_banner.scss
+++ b/scss/biscuit/default/_banner.scss
@@ -1,5 +1,5 @@
 .banner {
-  padding: 8px 12px;
+  padding: 8px 10px;
   display: flex;
   align-items: center;
   border-radius: 6px;
@@ -8,7 +8,10 @@
   background-repeat: repeat-x;
 
   .notification-icon {
-    margin-right: 6px;
+    margin-right: 7px;
+    width: 20px;
+    height: 20px;
+    background-size: 20px;
   }
 }
 
